[package]
name = "vigcoin-core"
version = "0.1.0"
authors = ["calidion <calidion@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
chrono = "0.4"
leb128 = "0.2.1"
keccak = "0.1.0"
hex = "0.3.2"
rust-base58 = "*"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"

[[bin]]
name = "vigcoin-core"
path = "src/main.rs"

[badges]
travis-ci = { repository = "vigcoin/core-rs", branch = "master" }
codecov = { repository = "vigcoin/core-rs", branch = "master", service = "github" }